added new notice management interface

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -105,6 +105,19 @@ img {
   </div>
 
 </div>
+  <div class="img-container">
+
+    <div class="introItem" onclick="window.location.href='/report/notices'">
+      <img class="introIcon" src="/images/notices.png">
+      <div class="introItemText">
+        <div class="introItemHeader">Site Notifications</div>
+        <div>View list of notices for the various sites.</div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
 
 </div>
 
