--- a/app/views/report/physical_stock_summary.html.erb
+++ b/app/views/report/physical_stock_summary.html.erb
@@ -111,7 +111,7 @@
 
 
         var site = document.getElementById('sitename').value
-        var report_date = document.getElementById("selected_date").value
+        var report_date = document.getElementById("start_date").value
         var drug = document.getElementById('selection-label').innerHTML
 
 
