--- a/app/views/report/months_of_stock.erb
+++ b/app/views/report/months_of_stock.erb
@@ -1,4 +1,4 @@
-<%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
+z<%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
 <%=javascript_include_tag "Charts/Highcharts/highcharts"%>
 <%=javascript_include_tag "Charts/Highcharts/exporting"%>
 
