--- a/app/views/report/months_of_stock.erb
+++ b/app/views/report/months_of_stock.erb
@@ -1,4 +1,4 @@
-z<%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
+<%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
 <%=javascript_include_tag "Charts/Highcharts/highcharts"%>
 <%=javascript_include_tag "Charts/Highcharts/exporting"%>
 
@@ -25,7 +25,7 @@ z<%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
                 spacingLeft: 10,
                 spacingRight: 10,
                 // Explicitly tell the width and height of a chart
-                height: (window.innerHeight - 70)
+                height: (window.innerHeight - 80)
 
             },
             title: {
