added sorting to main month of stocks menu

--- a/app/views/home/notices.html.erb
+++ b/app/views/home/notices.html.erb
@@ -475,7 +475,7 @@
             } catch(e){
             }
 
-            //timerHnd = setTimeout("ajaxTasks()", pollInterval);
+            timerHnd = setTimeout("ajaxTasks()", pollInterval);
         }
     }
 
@@ -489,7 +489,7 @@
         }
     }
 
-    // timerHnd = setTimeout("ajaxTasks()", pollInterval);
+     timerHnd = setTimeout("ajaxTasks()", pollInterval);
 
     /*
      d3.json("data.json")
