--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -35,7 +35,7 @@
       <% (@drugs || []).each do |dg| %>
           <option value="<%= dg%>"><%= @d_map[dg] %></option>
       <% end %>
-    </select>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: lightblue; font-size: 16px;"><%=  params[:start_date].to_date.strftime("%d-%b-%Y") %></span>
+    </select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: lightblue; font-size: 16px;"><%=  params[:start_date].to_date.strftime("%d-%b-%Y") %></span>
     <span style="color: rosybrown; font-size: 14px"> To </span>
     <span style="color: lightblue; font-size: 16px;"><%=   params[:end_date].to_date.strftime("%d-%b- %Y") rescue ("") %></span>
 <%end%>
