added commenting to notice management. Also removed redundant models and controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     	<![endif]-->
 
       <%= stylesheet_link_tag "footer.sticky" %>
+      <%= stylesheet_link_tag "application" %>
       <%= stylesheet_link_tag "IE/bootstrap" %>                                         
    		<style>
     		body{ padding-top: 60px; }
