--- a/public/stylesheets/IE/bootstrap.css
+++ b/public/stylesheets/IE/bootstrap.css
@@ -4981,3 +4981,39 @@ a.badge:hover {
 .invisible {
   visibility: hidden;
 }
+
+.opaqueLayer
+{
+    display:none;
+    position:absolute;
+    top:0px;
+    left:0px;
+    opacity:0.6;
+    filter:alpha(opacity=60);
+    background-color: #000000;
+    z-Index:1000;
+}
+
+.questionLayer
+{
+    position:absolute;
+    top:100px;
+    left:18%;
+    width:65%;
+    height:60%;
+    display:none;
+    z-Index:1001;
+    border:2px solid black;
+    background-color: white;
+    text-align:center;
+    vertical-align:middle;
+    padding:10px;
+}
+
+#shadow, #question {
+    -moz-user-select: none;
+}
+
+div {
+    -moz-user-select: none;
+}
