--- a/app/views/report/_stock_movement.html.erb
+++ b/app/views/report/_stock_movement.html.erb
@@ -13,81 +13,71 @@
     <script type="text/javascript">
 
     function plotGraph(drug) {
-      results = document.getElementById('results').value;
-      results = JSON.parse(results)
 
-    $(function () {
-        $('#container-chart').highcharts({
-            chart: {
-                type: 'spline'
-            },
-            title: {
-                text: 'Stock Movement Report For ' +drug
-            },
-            subtitle: {
-                text: ''
-            },
-            xAxis: {
+        $(function () {
 
-                type: 'datetime',
-                dateTimeLabelFormats: {
-                    day: '%e %b %y',
-                    week: '%e %b %y'
+            results = document.getElementById('results').value;
+            results = JSON.parse(results);
+
+            // Create the chart
+            $('#container-chart').highcharts('StockChart', {
+
+                rangeSelector: {
+                    inputEnabled: $('#container').width() > 480,
+                    selected: 1
                 },
-                minTickInterval: 24 * 3600 * 1000
-            },
-            yAxis: {
 
                 title: {
-                    text: 'Tins in stock'
+                    text: 'Stock Movement Report For ' +drug
                 },
-                labels: {
+                tooltip: {
+                    shared: true,
+                    useHTML: true,
+                    valueSuffix: ' ',
                     formatter: function() {
-                        return this.value;
-                    }
-                }
 
-            },
-            tooltip: {
-                shared: true,
-                headerFormat: '<b>{point.y} Tins of {series.name}</b><br>',
-                pointFormat: 'on {point.x:%e. %b %Y}',
-                valueSuffix: ' Tins'
-            },
-            plotOptions: {
-                area: {
-                    stacking: 'normal',
-                    lineColor: '#666666',
-                    lineWidth: 2,
-                    marker: {
-                        lineWidth: 100,
-                        lineColor: '#000000'
+                        main_text = '<span  style= "font-weight: bold; font-size : 10px;">' +
+                                'Date:  &nbsp&nbsp&nbsp&nbsp<span style="color: #097054; " >' + Highcharts.dateFormat('%A, %e %B %Y', this.x) + '</span> <br />' +
+                                'Stock Level:  &nbsp&nbsp&nbsp<span style="color: #097054; " >' + this.y + '</span> <br />'
+                        if (results[Highcharts.dateFormat('%Y-%m-%d', this.x)]["dispensed"] == null)
+                        {
+                            return '<span style="color: #ff0000;" >Supervision Visit </span><br/>' +main_text
+                        }
+                        else
+                        {
+                            return main_text + 'Dispensed:  &nbsp&nbsp&nbsp&nbsp<span style="color: #097054; " >' +
+                                    results[Highcharts.dateFormat('%Y-%m-%d', this.x)]["dispensed"] + '</span> <br />' +
+                                    'Relocated:  &nbsp&nbsp&nbsp&nbsp<span style="color: #097054; " >' +
+                                    results[Highcharts.dateFormat('%Y-%m-%d', this.x)]["relocated"] + '</span> <br />'
+                        }
+
+
                     }
-                }
-            },
-            series: [{
-            name: drug,
-            data: dataG(),
-            negativeColor: 'red'
-        }],
-            exporting: { enabled: false },
-            credits: { enabled: false }
+                },
+                series: [
+                    {
+                        name: drug,
+                        data: dataG(),
+                        negativeColor: 'red',
+                        step: true
+                    }
+                ],
+                exporting: { enabled: false },
+                credits: { enabled: false }
+            });
+
         });
-    });
-    
-
-  }
-
+    }
     function dataG() {
         results = document.getElementById('results').value;
         results = JSON.parse(results);
-        
+
         data = []
-        
-        for (i = 0; i < results.length; i++){
-            date = new Date(results[i][0])
+        dates = Object.keys(results);
+        for (i = 0; i < dates.length; i++){
+            date = new Date(dates[i])
 		
-            data.push([Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()) ,results[i][1]])
+            data.push([Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()) ,results[dates[i]]["stock_count"]])
         }
 
         return data.sort(function(a, b) {
@@ -106,7 +96,7 @@
   </head>
   <body>
 
-    <%=javascript_include_tag "Charts/Highcharts/highcharts"%>
+    <%=javascript_include_tag "Charts/Highcharts/highstock"%>
     <%=javascript_include_tag "Charts/Highcharts/exporting"%>
     <div id="wait" >
     </div>
