--- a/app/views/report/months_of_stock_main.html.erb
+++ b/app/views/report/months_of_stock_main.html.erb
@@ -149,7 +149,7 @@
             correctedWeights.push({y: val, color: col});
         <% end %>
 
-        return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, pointWidth: 20}];
+        return [{name: 'Month(s) of stock', showInLegend: false, data: correctedWeights, pointWidth: 20}];
     }
 
 </script>
