changed site management form validation messages and changed data scripts to reflect current DB model

--- a/app/views/administration/add_site.html.erb
+++ b/app/views/administration/add_site.html.erb
@@ -131,8 +131,7 @@
                 },
                 success: function(element) {
                     element
-                            .text('OK!').addClass('valid')
-                            .closest('.control-group').removeClass('error').addClass('success');
+                            .text('OK').addClass('success')
                 }
             });
 
@@ -158,8 +157,7 @@
             },
             success: function(element) {
                 element
-                        .text('OK!').addClass('valid')
-                        .closest('.control-group').removeClass('error').addClass('success');
+                        .text('OK').addClass('success')
             }
         });
 
