--- a/app/views/administration/edit_site.html.erb
+++ b/app/views/administration/edit_site.html.erb
@@ -192,8 +192,7 @@
                 },
                 success: function(element) {
                     element
-                            .text('OK!').addClass('valid')
-                            .closest('.control-group').removeClass('error').addClass('success');
+                            .text('OK').addClass('success')
                 }
             });
 
@@ -208,8 +207,7 @@
             },
             success: function(element) {
                 element
-                        .text('OK!').addClass('valid')
-                        .closest('.control-group').removeClass('error').addClass('success');
+                        .text('OK').addClass('success')
             }
         });
 
