removed link to page for managing notices on homepage map

--- a/app/views/home/map_main.html.erb
+++ b/app/views/home/map_main.html.erb
@@ -202,9 +202,9 @@
                                 .style("fill", "red");
                         return tooltip.style("visibility", "hidden");
                     })
-                    .on("click", function(){
-                        window.parent.switch(this.getAttribute('id'));
-                    });
+                    //.on("click", function(){
+                      //  window.parent.switch(this.getAttribute('id'));
+                    //});
         }
 
     }
