added a refresh function of the notices dashboard every 5 minutes

--- a/app/views/home/notices.html.erb
+++ b/app/views/home/notices.html.erb
@@ -489,7 +489,9 @@
         }
     }
 
-     timerHnd = setTimeout("ajaxTasks()", pollInterval);
+    setInterval(function() {
+        window.location.reload();
+    }, 300000);
 
     /*
      d3.json("data.json")
