changed date format for display of users and notices and fixed dashboard lengths

--- a/app/views/report/notices.html.erb
+++ b/app/views/report/notices.html.erb
@@ -90,7 +90,7 @@
 <div id="shadow" class="shadowLayer"> </div>
     <div id="question" class="dialogLayer" style="font-size: 0.9em;overflow: auto;background-color:#e0e0e0;">
           <div class="modal-header" >
-            <button type="button" class="close" onmousedown="hideLayer()"><span aria-hidden="true" >&times;</span></button>
+            <button type="button" class="close" style="color: #000000 !important;" onmousedown="hideLayer()"><span aria-hidden="true" >&times;</span></button>
             <h2 id="popup_title">Modal title</h2>
           </div>
           <div >
