--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,17 +37,25 @@
       current_pos = sites.indexOf(site)
       __$("report-display").setAttribute("src", "/report/months_of_stock_main?site="+ site);
   }
-</script>
+
+
+      function resizeIframe(id){
+
+          var frame = document.getElementById(id);
+          frame.height = frame.contentWindow.document.body.scrollHeight + "px";
+          frame.width = frame.contentWindow.document.body.scrollWidth + "px";
+      }
+  </script>
 </head>
-<body onresize="resizeTable()" onload="resizeTable();switchViews()">
+<body onresize="resizeTable()" onload="switchViews()">
 
 <div id="main" class="table" style="width: 99%; height: 83vh; border: 0px solid #000; top: 50px; position: absolute;">
   <div class="row">
-    <div style="text-align: center;background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.05);border-radius: 4px;" >
-      <iframe id="main-display" style=" height: 90vh; border: none; overflow: auto;" src="/home/map_main"></iframe>
+    <div style="text-align: center;background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.05);border-radius: 4px;padding-left: 50px;" >
+      <iframe id="main-display" onload="resizeIframe(this.id)" style=" height: 85vh;width: 100%; border: none; overflow: auto;" src="/home/map_main"></iframe>
     </div>
     <div class="cell" style="vertical-align: top;width: 65%;">
-      <iframe id="report-display" style="width: 100%;border: none; height: 80vh;overflow: auto;" ></iframe>
+      <iframe id="report-display" style="width: 100%;border: none; height: 90vh;overflow: auto;" ></iframe>
     </div>
   </div>
 </div>
@@ -92,15 +100,15 @@
     }
 
     function resizeTable(){
-        __$("main").style.height = (window.innerHeight - 100) + "px";
+        __$("main").style.height = "83vh";
 
-        __$("main-display").style.height = (window.innerHeight - 100) + "px";
+        __$("main-display").style.height = "85vh";
 
-        __$("report-display").style.height = (window.innerHeight - 100) + "px";
+        __$("report-display").style.height = "90vh";
 
-        __$("main-display").style.width = (window.innerWidth - ((window.innerHeight ) * 2 / 1.3)) + "px";
+        __$("main-display").style.width = "100%";
 
-        __$("report-display").style.width = (window.innerWidth - ((window.innerHeight ) * 0.6)) + "px";
+        __$("report-display").style.width = "100%";
     }
 
     timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
