--- a/app/views/report/stock_out_estimates.erb
+++ b/app/views/report/stock_out_estimates.erb
@@ -3,11 +3,22 @@
 <script type="text/javascript">
     function switch_site(site)
     {
+        var qty = document.getElementById("qty").value;
         if (site != "")
         {
-            document.getElementById("chart").setAttribute("src", "/report/months_of_stock?site_name="+ site);
+            document.getElementById("chart").setAttribute("src", "/report/months_of_stock?site_name="+ site + "&qty=" + qty);
         }
 
+    }
+
+    function switchUnits(value) {
+
+        jQuery.ajax({
+            url: "update_display_units?units=" + value,
+            success: function(result){
+                switch_site(document.getElementById("sites").value);
+            }
+        })
     }
 
 </script>
@@ -29,6 +40,14 @@
           <option><%= site %></option>
       <% end %>
     </select>
+&nbsp;&nbsp;&nbsp; Display Units:  <select id="qty" style="margin-top:1%;  width: 95px;" name="qty"
+                        onchange="switchUnits(this.value)">
+  <option value="1">Pills</option>
+  <option value="30">Tins of 30</option>
+  <option value="60" selected="true">Tins of 60</option>
+  <option value="90">Tins of 90</option>
+  <option value="120">Tins of 120</option>
+</select>
 
 <iframe id="chart" style="background-color:#f5f5f5;width: 98%;height:80vh;border: 1px solid #000000;border-radius: 15px;margin-left:1%;"></iframe>
 
@@ -55,16 +74,18 @@
     <%end%>
     <%end%>
 
-    function loadSiteChart(site){
+    function loadSiteChart(site, qty){
 
         <% if params[:name] == "months_of_stock" %>
-        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=' + site);
+        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/months_of_stock?site_name=' + site + "&qty=" + qty);
         <% elsif params[:name] == "stock_movement" %>
         <%if @drugs.blank?%>
         jQuery('#chart').empty().html("<span style='padding-left: 20.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'> \n\
                                                                                 No stock details found for specified time range </span>")
         <%else%>
-        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load('/report/stock_movement?start_date=<%= params[:start_date] %>&end_date=<%= params[:end_date] %>&site_name=<%= params[:site_name] %>&drug_name=' + escape(site));
+        jQuery('#chart').empty().html("<span style='padding-left: 43.5%;padding-top: 45%; width: 100%; text-align: center; font-size: 30px;'>Loading...</span>").load(
+                        '/report/stock_movement?start_date=<%= params[:start_date] %>&end_date=<%= params[:end_date] %>&site_name=<%= params[:site_name] %>&drug_name=' +
+                        escape(site) + "&qty=" + qty);
         <%end%>
         <%end%>
     }
